--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
   "private": true,
   "type": "module",
   "scripts": {
-  "start": "vite",
-  "build": "vue-tsc && vite build",
-  "preview": "vite preview"
+    "start": "vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-		"vue": "^3.2.47",
-		"vue-router": "^4.1.6"
+    "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
-		"vite": "^4.3.2",
-		"@vitejs/plugin-vue": "^4.1.0"
+    "vite": "^4.3.2",
+    "@vitejs/plugin-vue": "^4.1.0"
   },
   "main": "index.js",
   "author": "",
   "license": "ISC"
 }
-    
