--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
+    "sweetalert2": "^11.7.20",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
